<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HappaHappa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="title_activity_change_date">ChangeDateActivity</string>
    <string name="title_activity_change_clock">ChangeClockActivity</string>
    <string name="title_activity_list_items">ListItems</string>
    <string name="title_activity_navigation_draw"></string>

    <string-array name="titles">
        <item>"Add Item"</item>
        <item>"List"</item>
    </string-array>
    <string-array name="spinner_sport_list">
        <item>Mega Faul, sitzen und liegen </item>
        <item>Semi Faul, sitzen bisschen bewegung</item>
        <item>Normal, sitzend, gehend und stehend</item>

        <item>Semi Aktiv, stehend und gehend</item>
        <item>Aktiv, viel sprotliche Aktivität</item>
    </string-array>

    <string name="title_activity_day_view">DayView</string>
    <string name="state">Status</string>
    <string name="delete">Löschen</string>
    <string name="edit">Ändern</string>
    <string name="drawer_open">Navigation</string>
    <string name="drawer_closed"></string>
    <string name="title_activity_list_simple_items">ListSimpleItems</string>
    <string name="title_activity_select_date_fragment">SelectDateFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maxCalorie">Maximale Kalorien:</string>
    <string name="actUserText">Aktueller Nutzer</string>
    <string name="DayViewName">Übersicht</string>
    <string name="AddItemName">Happa+</string>
    <string name="ListExpandableItemsName">Historie</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="size">Größe</string>
    <string name="alter">Alter</string>
    <string name="weight">Gewicht</string>
    <string name="sport_activity">Sportliche Aktivität</string>
    <string name="birthdayyear">Geburtsjahr</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
